--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,11 @@ autopep8==1.4.3
 dj-database-url==0.5.0
 Django==2.1.3
 django-heroku==0.3.1
+gunicorn==19.9.0
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 Pillow==5.3.0
-
 psycopg2==2.7.6.1
 psycopg2-binary==2.7.6.1
 pycodestyle==2.4.0
